# phenomatrixpp

./: CMakeLists.txt  Makefile  Makefile.am  adjacency_list.h  avgmindist.cpp  avgmindist.h  bootstrap.sh  config.h.in  configure.ac  constants.h  distance.cpp  genephene.cpp  genephene.h  knearest.cpp  main.cpp  marshall.cpp  marshall.h  mindist.cpp  mindist.h  oracle.cpp  oracle.h  partialbayes.h  probability_matrix.h  test.cpp  utilities.cpp  utilities.h
aclocal/: ax_boost_base.m4  ax_boost_filesystem.m4
src/: Makefile.am  Makefile.old  adjacency_list.cpp  distance.h  genephene.cpp  genephene.h  knearest.h  main.cpp  main.cpp.in~  marshall.cpp  marshall.h  partialbayes.cpp  version.cpp.in  version.h  version.h.in
